Cập nhật các file, xóa và thêm component mới

--- a/learn-typescript/index.html
+++ b/learn-typescript/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./dist/typescipt.js"></script>
+    <script src="./dist/bai1.js"></script>
   </body>
 </html>
